--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
     </div>
 </div>
 
-    <div class="heritage-section" style="max-width: 900px; margin: 0 auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+  <div class="heritage-section" style="max-width: 900px; margin: 50px auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   
   <div style="background-color: #f9fbf9; padding: 40px 30px; border-radius: 25px; border: 1px solid #e1e8e1; box-shadow: 0 10px 20px rgba(0,0,0,0.02);">
     
