--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
     }
   </style>
 
-  <div class="insight-card-wrapper">
+<div class="insight-card-wrapper">
     
     <div class="insight-card card-current">
       <div>
@@ -609,22 +609,22 @@
 
     <div class="insight-card card-archive">
       <div>
-        <div style="display: flex; align-items: center; margin-bottom: 25px;">
+        <div style="display: flex; align-items: center; margin-bottom: 20px;">
           <div style="background: rgba(148, 163, 184, 0.1); width: 45px; height: 45px; border-radius: 12px; display: flex; align-items: center; justify-content: center; margin-right: 15px; border: 1px solid rgba(148, 163, 184, 0.3);">
             <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#94a3b8" stroke-width="2"><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></svg>
           </div>
           <h3 style="font-size: 22px; color: #94a3b8; margin: 0; font-weight: 800;">Performance Archive</h3>
         </div>
 
-        <div style="font-size: 14px; line-height: 1.7; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 25px; font-style: italic;">
-          <p style="margin: 0 0 18px 0; color: #fff; font-weight: 700; font-style: normal; font-size: 17px;">Fall Review & Strategic Focus </p>
-          <p style="margin-bottom: 18px;">The Patriot All-America provided a clear benchmark against one of the strongest amateur fields in the country. Following the event, Joshua conducted a technical review, which identified <strong>long-iron precision</strong> as a key area requiring immediate improvement to compete consistently at the NCAA level.</p>
-          <p style="margin-bottom: 18px;">In coordination with the UTSA coaching staff, a short-term adjustment was approved to prioritize an <strong>intensive training block during January</strong>. This decision was made with a single objective: to return fully prepared for qualifying rounds and contribute more effectively to the team’s performance during the Spring season.</p>
+        <div style="font-size: 14px; line-height: 1.6; color: #efefef; border-left: 4px solid #94a3b8; padding-left: 20px; font-style: italic;">
+          <p style="margin: 0 0 12px 0; color: #fff; font-weight: 700; font-style: normal; font-size: 17px;">Fall Review & Strategic Focus </p>
+          <p style="margin-bottom: 12px;">The Patriot All-America provided a clear benchmark against one of the strongest amateur fields in the country. Following the event, Joshua conducted a technical review, which identified <strong>long-iron precision</strong> as a key area requiring immediate improvement to compete consistently at the NCAA level.</p>
+          <p style="margin-bottom: 12px;">In coordination with the UTSA coaching staff, a short-term adjustment was approved to prioritize an <strong>intensive training block during January</strong>. This decision was made with a single objective: to return fully prepared for qualifying rounds.</p>
           <p style="margin-bottom: 0;">Joshua is grateful to the UTSA staff for their trust and collaboration, and he remains fully committed to translating this focused work into measurable results that elevate the team’s standing.</p>
         </div>
       </div>
 
-      <label for="card-toggle" class="toggle-btn" style="margin-top: 20px;">
+      <label for="card-toggle" class="toggle-btn" style="margin-top: 15px;">
         <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><polyline points="15 18 9 12 15 6"></polyline></svg> BACK TO CURRENT FOCUS
       </label>
     </div>
