--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -221,8 +221,8 @@
 
   <div style="text-align: center; margin-bottom: 35px; padding-top: 20px;">
     <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1.5px; text-transform: uppercase; line-height: 1.1;">
-  NCAA STATS
-</h1>
+      NCAA STATS
+    </h1>
     <div style="display: flex; align-items: center; justify-content: center; gap: 10px; margin-top: 10px;">
       <div style="height: 2px; width: 30px; background: #c98a2e;"></div>
       <p style="font-size: 15px; color: #666; margin: 0; font-weight: 600; letter-spacing: 0.5px; text-transform: uppercase;">
@@ -232,12 +232,12 @@
     </div>
   </div>
 
-<div style="width: 100%; border-radius: 25px; overflow: hidden; box-shadow: 0 20px 40px rgba(0,0,0,0.18); background-color: #ffffff; border: 1px solid #e2e8f0;">
-    <img src="https://drive.google.com/thumbnail?id=11fyK0kkDZxFBu-A3fonPZwXJirY2VRty&sz=w1200" 
+  <div style="width: 100%; border-radius: 25px; overflow: hidden; box-shadow: 0 20px 40px rgba(0,0,0,0.18); background-color: #ffffff; border: 1px solid #e2e8f0; min-height: 200px;">
+    <img src="https://drive.google.com/uc?export=view&id=11fyK0kkDZxFBu-A3fonPZwXJirY2VRty" 
          style="width: 100%; height: auto; display: block; object-fit: contain;" 
          alt="Joshua Hong Performance"
-         onerror="this.src='https://drive.google.com/uc?export=view&id=11fyK0kkDZxFBu-A3fonPZwXJirY2VRty';">
-</div>
+         onerror="this.style.display='none';">
+  </div>
 
 </div>
 
