--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1009,11 +1009,11 @@
     <div style="background: #ffffff; padding: 25px; border-left: 6px solid #0c2340; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #f1f1f1; border-left-width: 6px;">
       <h4 style="margin: 0 0 12px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
-        Technical Evolution & Consistency
+        Performance Stability & Metrics
       </h4>
-      <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        Analysis of technical stability and scoring consistency will be updated following the completion of the inaugural Spring tournaments. Current focus remains on <b>stabilizing ball striking</b> and <b>optimizing short-game efficiency</b> under competitive conditions.
-      </p>
+<p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+  Performance metrics and scoring data will be updated post-competition. Current focus is on <b>stabilizing ball-striking</b> and <b>minimizing short-game variance</b> under tournament conditions.
+</p>
     </div>
 
     <div style="background: #f8fafc; padding: 25px; border-left: 6px solid #2b6cb0; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); margin-bottom: 20px; border: 1px solid #e2e8f0; border-left-width: 6px;">
@@ -1021,9 +1021,9 @@
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"></path><line x1="4" y1="22" x2="4" y2="15"></line></svg>
         Course Analysis & Team Readiness
       </h4>
-      <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        Strategy logs for upcoming courses and <b>collaborative training insights</b> with the UTSA squad will be documented here. Feedback on competitive course setups and internal qualifying metrics will be added to enhance performance transparency.
-      </p>
+<p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+  Course-specific strategies and <b>internal qualifying metrics</b> will be updated systematically. Data on competitive course setups and <b>performance transparency</b> are maintained to align with UTSA team standards and professional preparation.
+</p>
     </div>
 
     <div style="background: #fffdfa; padding: 25px; border-left: 6px solid #806600; border-radius: 8px; box-shadow: 0 4px 15px rgba(0,0,0,0.03); border: 1px solid #f9f0e3; border-left-width: 6px;">
@@ -1031,9 +1031,9 @@
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="3"></circle></svg>
         Advanced Coaching & Development
       </h4>
-      <p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
-        Following the integration of <b>Bryan Gathright's technical coaching</b>, data regarding swing evolution and competitive performance gains will be tracked throughout the Spring season. Readiness for <b>NCAA Regional objectives</b> remains the primary developmental target.
-      </p>
+<p style="margin: 0; font-size: 15px; color: #4a5568; line-height: 1.8; text-align: justify; word-break: keep-all;">
+  Following the integration of <b>Bryan Gathright’s technical protocols</b>, longitudinal data on swing mechanics and competitive scoring will be tracked throughout the Spring season. Preparation for <b>NCAA Regional qualification</b> remains the primary performance target.
+</p>
     </div>
 
   </div>
@@ -1084,45 +1084,45 @@
 
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px;">
       
-      <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
-        <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg>
-          Spring Roster Security
-        </h4>
-        <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
-          Currently participating in Travel Squad qualifiers. Managing performance metrics to secure a stable position within the competitive lineup for the 2026 season opener.
-        </p>
-      </div>
+<div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
+  <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
+    Competitive Lineup & Team Contribution
+  </h4>
+  <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
+    Focusing on <b>maximizing scoring contribution</b> for the UTSA Travel Squad. Current metrics are prioritized to maintain competitive consistency within the lineup and support team-scoring objectives for the 2026 Spring season.
+  </p>
+</div>
 
-      <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
-        <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><circle cx="12" cy="12" r="10"></circle><line x1="22" y1="12" x2="18" y2="12"></line><line x1="6" y1="12" x2="2" y2="12"></line><line x1="12" y1="6" x2="12" y2="2"></line><line x1="12" y1="22" x2="12" y2="18"></line></svg>
-          Performance Targets
-        </h4>
-        <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
-          Prioritizing the stabilization of <b>Scoring Average</b> through precise technical adjustments and strategic course management protocols.
-        </p>
-      </div>
+    <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
+  <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><circle cx="12" cy="12" r="10"></circle><line x1="22" y1="12" x2="18" y2="12"></line><line x1="6" y1="12" x2="2" y2="12"></line><line x1="12" y1="6" x2="12" y2="2"></line><line x1="12" y1="22" x2="12" y2="18"></line></svg>
+    Performance Targets & Metric Calibration
+  </h4>
+  <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
+    While maintaining <b>stability in Par 3 and Par 5 scoring efficiency</b>, current technical focus is directed toward <b>optimizing Par 4 saving rates</b>. Strategic training protocols are being implemented to minimize scoring variance and enhance scramble recovery metrics under competitive conditions.
+  </p>
+</div>
 
-      <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
-        <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-          Operational Consistency
-        </h4>
-        <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
-          Maintaining a <b>100% Counting Score rate</b> to ensure reliable data contribution toward the UTSA team totals.
-        </p>
-      </div>
+<div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
+  <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
+    Statistical Reliability
+  </h4>
+  <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
+    Focusing on a <b>100% Counting Score rate</b> to maintain consistent data contribution. This objective ensures that every competitive round serves as a reliable asset toward the UTSA team scoring aggregate.
+  </p>
+</div>
 
-      <div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
-        <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-          Competitive Readiness
-        </h4>
-        <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
-          Real-time statistics and round-by-round qualifier data will be updated upon the commencement of Spring tournament play.
-        </p>
-      </div>
+<div style="border-top: 1px solid #f1f1f1; padding-top: 20px;">
+  <h4 style="font-size: 14px; color: #0c2340; margin-bottom: 12px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
+    Post-Round Analysis & Training Alignment
+  </h4>
+  <p style="font-size: 14px; color: #4a5568; line-height: 1.7; margin: 0; text-align: justify; word-break: keep-all;">
+    Competitive logs are maintained to <b>identify performance gaps</b> and define technical objectives. Each round’s data is used to <b>calibrate practice protocols</b>, ensuring systematic improvement throughout the Spring season.
+  </p>
+</div>
 
     </div>
 
@@ -1166,15 +1166,21 @@
     <div style="font-size: 15px; color: #334155; line-height: 1.8;">
       <b style="font-size: 16px; color: #0c2340; display: block; margin-bottom: 20px; border-bottom: 2px solid #f1f5f9; padding-bottom: 10px; font-weight: 900; text-transform: uppercase;">Spring Season Objectives:</b>
 
-      <div style="background: #ffffff; padding: 25px; border-top: 6px solid #0c2340; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
-        <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"></circle><line x1="22" y1="12" x2="18" y2="12"></line><line x1="6" y1="12" x2="2" y2="12"></line><line x1="12" y1="6" x2="12" y2="2"></line><line x1="12" y1="22" x2="12" y2="18"></line></svg>
-          Strategic Course Management
-        </h4>
-        <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all;">
-          Integration of <b>Bryan Gathright's</b> technical coaching into real-time decision making. Focus is placed on minimizing unforced errors, optimizing <b>birdie conversion rates</b> and <b>par save efficiency</b> on par-4 holes.
-        </p>
-      </div>
+<div style="background: #ffffff; padding: 25px; border-top: 6px solid #0c2340; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
+  <h4 style="margin: 0 0 10px 0; color: #0c2340; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <circle cx="12" cy="12" r="10"></circle>
+      <line x1="22" y1="12" x2="18" y2="12"></line>
+      <line x1="6" y1="12" x2="2" y2="12"></line>
+      <line x1="12" y1="6" x2="12" y2="2"></line>
+      <line x1="12" y1="22" x2="12" y2="18"></line>
+    </svg>
+    Strategic Course Management
+  </h4>
+  <p style="margin: 0; color: #4a5568; font-size: 15px; line-height: 1.8; text-align: justify; word-break: keep-all;">
+    Current focus is the <b>seamless integration of Bryan Gathright’s technical directives</b> into competitive decision-making. High priority is placed on internalizing swing-plane adjustments to <b>minimize unforced errors</b> and improve proximity metrics on Par-4 holes for stabilized scoring.
+  </p>
+</div>
 
       <div style="background: #ffffff; padding: 25px; border-top: 6px solid #546e7a; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 20px; border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
         <h4 style="margin: 0 0 10px 0; color: #455a64; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
@@ -1186,16 +1192,18 @@
         </p>
       </div>
 
-      <div style="background: #ffffff; padding: 25px; border-top: 6px solid #806600; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
-        <h4 style="margin: 0 0 10px 0; color: #806600; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
-          Post-Event Performance Analytics
-        </h4>
-        <p style="margin: 0; color: #4a5568; text-align: justify; word-break: keep-all;">
-          Following the conclusion of the season opener, a comprehensive analysis of head-to-head win rates and <b>Strokes Gained</b> metrics will be updated to track seasonal progression.
-        </p>
-      </div>
-    </div>
+<div style="background: #ffffff; padding: 25px; border-top: 6px solid #806600; border-radius: 12px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); border-left: 1px solid #f1f5f9; border-right: 1px solid #f1f5f9; border-bottom: 1px solid #f1f5f9;">
+  <h4 style="margin: 0 0 10px 0; color: #806600; font-size: 16px; font-weight: 800; display: flex; align-items: center; gap: 8px;">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
+      <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
+    </svg>
+    Statistical Progression & Learning Curve
+  </h4>
+  <p style="margin: 0; color: #4a5568; font-size: 15px; line-height: 1.8; text-align: justify; word-break: keep-all;">
+    As a freshman, emphasis is placed on leveraging <b>post-event analytics</b> to identify developmental benchmarks. <b>Strokes Gained (SG)</b> and field-adjusted metrics are systematically reviewed to align training intensity with competitive requirements, ensuring a consistent seasonal progression.
+  </p>
+</div>
 
   </div>
 </div>
