--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
     }
     * { box-sizing: border-box; }
 
-    /* [헤더 설정] 처음에는 평범하게 있다가 스크롤 시 변신 */
+    /* [헤더 설정] */
     .sticky-top {
-      position: absolute; /* 처음엔 상단에 고정 */
+      position: absolute; /* 시작은 상단 고정 */
       top: 0; z-index: 1000; width: 100%;
       background: #ffffff;
-      transition: all 0.4s ease-in-out; 
+      transition: all 0.4s ease-in-out;
     }
 
-    /* 스크롤 내릴 때 적용되는 스타일: 스르륵 내려오며 따라다님 */
+    /* 스크롤 시 변신: 스르륵 내려오며 따라다님 */
     .sticky-top.scrolled {
       position: fixed;
-      transform: translateY(0); /* 아래로 스르륵 나타남 */
+      transform: translateY(0);
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       animation: slideDown 0.4s ease-out;
     }
 
-    /* 스크롤 올릴 때 숨길 스타일 */
+    /* 스크롤 올릴 때 숨김 */
     .sticky-top.nav-hide {
       transform: translateY(-100%);
     }
@@ -103,15 +103,17 @@
       .nav-links.active { left: 0; }
     }
 
-    /* [배너 사이즈 해결] 헤더가 붕 뜨지 않게 유지 */
-    .header-placeholder { height: 120px; }
-    @media (max-width: 1024px) { .header-placeholder { height: 110px; } }
+    /* [배너 사이즈 문제 해결] 본문 상단 여백을 명확히 주어 배너가 커지지 않게 함 */
+    .main-content {
+      margin-top: 120px; /* 헤더 높이만큼 띄움 */
+    }
+    @media (max-width: 1024px) {
+      .main-content { margin-top: 110px; }
+    }
   </style>
 </head>
 
 <body>
-  <div class="header-placeholder"></div>
-
   <div class="sticky-top" id="mainHeader">
     <div class="top-bar">OFFICIAL WEBSITE OF JOSHUA HONG | UTSA </div>
     <header class="header-wrapper">
@@ -132,6 +134,19 @@
 
   <button id="fixedTopBtn" onclick="scrollToTop()">TOP</button>
 
+  <div class="main-content">
+    <div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 15px; box-sizing: border-box;">
+      <div style="text-align: center; margin-bottom: 25px; padding-top: 20px;">
+        <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; letter-spacing: -1px; text-transform: uppercase; line-height: 1.1;">
+          JOSHUA HONG
+        </h1>
+        <p style="font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 600; letter-spacing: 2px;">
+          UTSA MEN'S GOLF
+        </p>
+      </div>
+    </div>
+  </div>
+
   <script>
     function toggleMenu() {
       document.getElementById('navLinks').classList.toggle('active');
@@ -144,25 +159,22 @@
     window.addEventListener('scroll', () => {
       const currentScroll = window.pageYOffset;
 
-      // 1. TOP 버튼
+      // TOP 버튼 노출
       if (currentScroll > 150) {
         btn.style.display = 'block';
       } else {
         btn.style.display = 'none';
       }
 
-      // 2. 부모님 요청 로직: 내릴 때 스르륵 나타나고, 올릴 때 사라짐
-      if (currentScroll > 50) { // 50픽셀 이상 내리면
+      // 내릴 때 헤더 스르륵 / 올릴 때 숨김 로직
+      if (currentScroll > 50) {
         if (currentScroll > lastScroll) {
-          // [내려가는 중] 헤더가 스르륵 나타나 따라다님
           header.classList.remove('nav-hide');
           header.classList.add('scrolled');
         } else {
-          // [올라가는 중] 헤더를 숨김
           header.classList.add('nav-hide');
         }
       } else {
-        // 최상단일 때는 원래 상태로
         header.classList.remove('scrolled', 'nav-hide');
       }
       
@@ -173,17 +185,6 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     }
   </script>
-
-  <div class="profile-container" style="width: 100%; max-width: 900px; margin: 0 auto; padding: 0 15px;">
-    <div style="text-align: center; margin-bottom: 25px; padding-top: 20px;">
-      <h1 style="font-size: 34px; font-weight: 900; color: #0c2340; margin: 0; text-transform: uppercase;">
-        JOSHUA HONG
-      </h1>
-      <p style="font-size: 16px; color: #666; margin: 10px 0 0 0; font-weight: 600;">
-        UTSA MEN'S GOLF
-      </p>
-    </div>
-  </div>
 </body>
 
 
